--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,7 @@
+help.md
+mvnw
+mvnw.cmd
+
 # Compiled class file
 *.class
 
@@ -22,4 +26,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-.vscode/settings.json
+
+target/*
+
+.vscode/*
